crates/test-generator/tests/snapshots/ts/test_generated_switch_statement.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
switch (value26) { case 1: break; default: break; }

AST:
(program
  (switch_statement
    value: (parenthesized_expression
      (identifier "value26")
    )
    body: (switch_body
      (switch_case
        value: (number "1")
        body: (break_statement)
      )
      (switch_default
        body: (break_statement)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "value26",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 9,
                end_line: 1,
                end_column: 16,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
