crates/test-generator/tests/snapshots/ts/test_generated_template_literal_type.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
type Test<T3> = `hello ${T3}!`; const value27: Test<'world'> = 'hello world!';

AST:
(program
  (type_alias_declaration
    name: (type_identifier "Test")
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier "T3")
      )
    )
    value: (template_literal_type
      (string_fragment)
      (template_type
        (type_identifier "T3")
      )
      (string_fragment)
    )
  )
  (lexical_declaration
    (variable_declarator
      name: (identifier "value27")
      type: (type_annotation
        (generic_type
          name: (type_identifier "Test")
          type_arguments: (type_arguments
            (literal_type
              (string
                (string_fragment)
              )
            )
          )
        )
      )
      value: (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:6 to 1:10 }, name: "Test", definition_type: TypeDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(true) },
        Definition { position: { 1:11 to 1:13 }, name: "T3", definition_type: TypeDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:39 to 1:46 }, name: "value27", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:26 to 1:28 }, name: "T3", kind: TypeIdentifier, context: None },
        Usage { position: { 1:48 to 1:52 }, name: "Test", kind: TypeIdentifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
