crates/test-generator/tests/snapshots/ts/test_generated_template_type.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const value28: `hello ${string}` = 'hello world';

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "value28")
      type: (type_annotation
        (template_literal_type
          (string_fragment)
          (template_type
            (predefined_type "string")
          )
        )
      )
      value: (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:14 }, name: "value28", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
