crates/test-generator/tests/snapshots/ts/test_generated_throw_statement.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
throw new Error(error);

AST:
(program
  (throw_statement
    (new_expression
      constructor: (identifier "Error")
      arguments: (arguments
        (identifier "error")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:11 to 1:16 }, name: "Error", kind: Identifier, context: None },
        Usage { position: { 1:17 to 1:22 }, name: "error", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
