crates/test-generator/tests/snapshots/ts/test_generated_tuple_type.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const value29: [string, number] = ['hello', 42];

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "value29")
      type: (type_annotation
        (tuple_type
          (predefined_type "string")
          (predefined_type "number")
        )
      )
      value: (array
        (string
          (string_fragment)
        )
        (number "42")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:14 }, name: "value29", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
