crates/test-generator/tests/snapshots/ts/test_generated_type_alias_declaration.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
type TestType = string;

AST:
(program
  (type_alias_declaration
    name: (type_identifier "TestType")
    value: (predefined_type "string")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:6 to 1:14 }, name: "TestType", definition_type: TypeDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(true) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
