crates/test-generator/tests/snapshots/ts/test_generated_unary_expression.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
!value30

AST:
(program
  (expression_statement
    (unary_expression
      argument: (identifier "value30")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "value30",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 2,
                end_line: 1,
                end_column: 9,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
